FIX on context menu open screen does not jump anymore

--- a/src/assets/css/dmn-js-override.css
+++ b/src/assets/css/dmn-js-override.css
@@ -24,4 +24,22 @@
 
 .dmn-decision-table-container .powered-by-overlay {
     z-index: 1050;
-  }
+}
+
+
+.dmn-decision-table-container .tjs-container {
+    width: auto;
+    overflow: auto;
+    width: 100%;
+    height: 100%;
+}
+
+.dmn-decision-table-container {
+    width: 100%;
+    height: 100%;
+    position: initial;
+}
+
+.dmn-js-parent {
+    position: initial;
+}
